# Serious-Engine

./: .gitignore
Sources/: CMakeLists.txt
Sources/Ecc/: CMakeLists.txt  Ecc.vcxproj  Scanner.l
Sources/Engine/: CMakeLists.txt
Sources/Engine/Math/: Vector.h
Sources/Engine/Templates/: Selection.cpp
Sources/EntitiesMP/: CMakeLists.txt
