CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(SeriousEngine)

IF (CMAKE_COMPILER_IS_GNUCXX)
	SET (GNUCXX_FLAGS -DPLATFORM_UNIX=1 -D_MT=1 -std=c++11 -fpermissive)
ELSE (CMAKE_COMPILER_IS_GNUCXX)
	SET (MSVC_FLAGS /D_CRT_SECURE_NO_WARNINGS /MT)
ENDIF (CMAKE_COMPILER_IS_GNUCXX)


# FIXME: Don't define UNIX for Windows projects
IF (${CMAKE_VERSION} VERSION_GREATER 2.8.11)
	add_compile_options (${GNUCXX_FLAGS} ${MSVC_FLAGS})
ELSE(${CMAKE_VERSION} VERSION_GREATER 2.8.11)
	ADD_DEFINITIONS (${GNUCXX_FLAGS} ${MSVC_FLAGS})
ENDIF(${CMAKE_VERSION} VERSION_GREATER 2.8.11)

# Looks like the engine depends on these projects at some point.
# FIXME: For Windows, these are in Tools.Win32
if (NOT WIN32)
	FIND_PACKAGE(BISON REQUIRED)
	FIND_PACKAGE(FLEX REQUIRED)
endif (NOT WIN32)

# FIXME: Also execute Ecc on .es files to generate the corresponding sources.
ADD_SUBDIRECTORY("Ecc")


# Create a temporary blacklist of non-functional ES files
SET(BLACKLISTED_ES "ParticleCloudsMarker.es;ParticleCloudsHolder.es")

FILE(GLOB_RECURSE ES_SOURCES "./*.es")


ADD_CUSTOM_TARGET(ECC_HEADERS
	ALL
	DEPENDS Ecc)

FOREACH(FILE ${ES_SOURCES})
    GET_FILENAME_COMPONENT(FILE ${FILE} ABSOLUTE)

    # Check the black list
    GET_FILENAME_COMPONENT(FILENAME ${FILE} NAME)
    LIST(FIND BLACKLISTED_ES ${FILENAME} FILELOCATION)

    IF (${FILELOCATION} EQUAL -1)
	    ADD_CUSTOM_COMMAND(TARGET ECC_HEADERS POST_BUILD
            COMMAND $<TARGET_FILE:Ecc> ${FILE})
    ENDIF()
ENDFOREACH()



# There are some things we currently can't build because of WinAPI dependencies
IF (WIN32)
  ADD_SUBDIRECTORY("WorldEditor")
  ADD_SUBDIRECTORY("SeriousSkaStudio")
  ADD_SUBDIRECTORY("EngineGui")
  ADD_SUBDIRECTORY("RCon")
  ADD_SUBDIRECTORY("GameGUIMP")
  ADD_SUBDIRECTORY("Modeler")
ENDIF(WIN32)

ADD_SUBDIRECTORY("Engine")

ADD_SUBDIRECTORY("Depend")
ADD_SUBDIRECTORY("GameMP")
ADD_SUBDIRECTORY("MakeFONT")
ADD_SUBDIRECTORY("DecodeReport")
ADD_SUBDIRECTORY("DedicatedServer")
ADD_SUBDIRECTORY("LWSkaExporter")
ADD_SUBDIRECTORY("Shaders")
ADD_SUBDIRECTORY("SeriousSam")
